fix spacing and overflow

--- a/client/assets/styles/scss/components/cards-title.scss
+++ b/client/assets/styles/scss/components/cards-title.scss
@@ -19,13 +19,10 @@
     flex: 0 1 auto;
     justify-content: center;
     margin: 15px auto 0;
+    max-width: 100%;
     padding: 0 15px;
 
     &:hover {
-      color: $gray-darker;
-    }
-
-    &:active {
       color: $purple-light;
     }
 
