--- a/client/assets/styles/scss/deprecated/card-status.scss
+++ b/client/assets/styles/scss/deprecated/card-status.scss
@@ -1,14 +1,18 @@
 //- ************************
 //- deprecated file, delete with $root.featureFlags.cardStatus
-.card-header.deprecated {
+.server-status-card-pop-over.deprecated {
 
   .icons-status {
     flex: 0 0 auto;
   }
 
   .container-title {
-    font-size: 18px;
+    margin-left: 5px;
   }
+}
+
+.card-header .server-status-card-pop-over.deprecated .container-title {
+  font-size: 18px;
 }
 //- end deprecated file
 //- ************************
